# cv

./: 1.rar  51970  README.md  circular_buffer.py
cpp/: brute_force.cpp
cpp/shape2d/: CMakeLists.txt  bezier_curve.cpp  bezier_curve.hpp  box.cpp  box.hpp  circle.cpp  circle.hpp  demo.cpp  demo.hpp  glcontext.cpp  glcontext.hpp  icontext.cpp  icontext.hpp  ishape.cpp  ishape.hpp  spaceball.cpp  vmath.h
cpp/shape2d/freeglut/lib/: libglut.so.3.11.0
sharp/cars/: car.cs
sharp/sql/: sql.sql
